# promptorium

./: .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
promptlib/: cli.py  services.py
promptlib/storage/: __init__.py  base.py  fs.py
promptlib/util/: diff.py  editor.py  keygen.py  repo_root.py
promptorium/: __init__.py  domain.py  services.py
promptorium/util/: io_safety.py  keygen.py  render.py
tests/: test_cli.py  test_diff.py  test_storage_fs.py
